web-app/manifest-files/gitea.middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: gitea-rewrite
  namespace: dev-station
spec:
  replacePathRegex:
    regex: "^/gitea/(.*)"
    replacement: "/$1"
