web-app/manifest-files/gitea.ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dev-station-ingress
  namespace: dev-station
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dev-station.cluster.sololab.one`) && PathPrefix(`/gitea`)
      services:
        - kind: Service
          name: gitea-service
          port: 8080
